--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
          <p><strong><em>junior</em> web Developer🏆🫠✅<strong></p>
                 <br />...about<button style="padding:6px;background-color:aqua;border-color:aqua"><a href="./public/about.html">🔔</a><br /></button>
                 <br />contact<button style="padding:6px;background-color:aqua;border-color:aqua"><a href="./public/contact.html" style="">🔔</button></a>
+                <a href="./public/resume.html"><button style="padding:15px;background-color:tomato;">Resume⭐⭐</button></a>
        </h1>
  <hr />
        <button><a href="./public/movie-ranking.html" style="background-color:aliceblue;color:black;font-size:x-large;">movie ranking project</a></button><br />
