--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portifolio</title>
     <style>
-        body{
-        
-        }
         h1{
                 background-attachment: fixed;
                 background-color: black;
@@ -44,7 +41,7 @@
    
          <p><strong><em>junior</em> web Developer🏆🫠✅<strong></p>
                 <br />...about<button style="padding:6px;background-color:aqua;border-color:aqua"><a href="./public/about.html">🔔</a><br /></button>
-                <br />contact<button style="padding:6px;background-color:aqua;border-color:aqua"><a href="./public/contact.html" style="">🔔</button></a>
+                <br />contact<button style="padding:6px;background-color:aqua;border-color:aqua"><a href="./public/contact.html">🔔</button></a>
                 <br /><br/><a href="./public/resume.html"><button style="padding:15px;background-color:tomato;">Resume⭐⭐</button></a>
        </h1>
  <hr />
