--- a/public/resume.html
+++ b/public/resume.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Resume</title>
+    <style>
+       h1{
+        background-color: rgb(207, 230, 106);
+        text-align:center;
+       }
+       p{
+        font-family: Arial, Helvetica, sans-serif;
+       }
+       h4{
+        font-family: Arial, Helvetica, sans-serif;
+       }
+    </style>
 </head>
 <body>
-    
+    <h1>Resume</h1>
+    <h2>Summary</h2>
+    <p>My name is john mbugua, a student at karatina university pursing bachelor of science in information technology and at udemy where am pursuing a course in web development, 
+i aspire to be a web developer and through udemy, i presume i will attain my goal having put forth my hardwork and dedication.
+My goal at the end of This course is to be a junior web developer.
+    </p>
+    <h2>Education</h2>
+    <p><ul>
+     <li><h4>Karatina university (2026)</h4></li>
+     <li><h4>Njenga Karume Secondary(2019)</h4></li>
+     <li><h4>St.clare Primary(2014)</h4></li>
+    </ul>
+    </p>
+    <h2>Work Experience</h2>
+    <p>n/a</p>
+    <h2>Skills</h2>
+    <p>
+        HTML
+        CSS
+    </p>
 </body>
 </html>
