--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <p><strong><em>junior</em> web Developer🏆🫠✅<strong></p>
                 <br />...about<button style="padding:6px;background-color:aqua;border-color:aqua"><a href="./public/about.html">🔔</a><br /></button>
                 <br />contact<button style="padding:6px;background-color:aqua;border-color:aqua"><a href="./public/contact.html">🔔</button></a>
-                <br /><br/><a href="./public/resume.html"><button style="padding:15px;background-color:tomato;">Resume⭐⭐</button></a>
+                <br /><br/><a href="./public/resume.html"><button style="padding:15px;background-color:rgb(218, 22, 22);border-radius:20px;">Resume⭐⭐</button></a>
        </h1>
  <hr />
        <button><a href="./public/movie-ranking.html" style="background-color:aliceblue;color:black;font-size:x-large;">movie ranking project</a></button><br />
