--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
        <img src="./assets/images/birthday invitation.png" width="200px" height="200px">
    </pre>
 <hr />
-
+<footer>
+    <p>© 2024 Kuria John Mbugua</p>
+</footer>
 </body>
 </html>
