--- a/public/contact.html
+++ b/public/contact.html
@@ -15,6 +15,6 @@
 <h2>Tel: +254794506350</h2>
 <h2>Email: embugua1010@gmail.com</h2>
 <h2>Country:kenya🇰🇪</h2>
-
+<footer>© 2024 Kuria John Mbugua
 </body>
 </html>
