--- a/public/resume.html
+++ b/public/resume.html
@@ -38,5 +38,8 @@ My goal at the end of This course is to be a junior web developer.
         HTML
         CSS
     </p>
+    <footer>
+    <p>© 2024 Kuria John Mbugua</p>
+  </footer>
 </body>
 </html>
