--- a/public/resume.html
+++ b/public/resume.html
@@ -38,6 +38,8 @@ My goal at the end of This course is to be a junior web developer.
         HTML
         CSS
     </p>
+    <br /><a href="./hobbies.html">hobbies</a>
+    <br />
     <footer>
     <p>© 2024 Kuria John Mbugua</p>
   </footer>
