--- a/index.html
+++ b/index.html
@@ -2,23 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./public/styles.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portifolio</title>
-    <style>
-        h1{
-                background-attachment: fixed;
-                background-color: black;
-                color:aliceblue;
-                text-align:center;
-                padding:75px;
-        }
-        }
-        em{
-                background-color:blueviolet;
-                padding: 5px;
-        }
-    </style>
 </head>
 <body>
        <h1>
