--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./public/styles.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portifolio</title>
+    <title>home page</title>
 </head>
 <body>
        <h1>
-        <img src="./assets/images/WhatsApp Image 2024-04-19 at 5.02.11 AM.jpeg"width="200" height="200"style="border-radius:100px; align:margin;margin:left;">
+        <img id="meme" src="./assets/images/WhatsApp Image 2024-04-19 at 5.02.11 AM.jpeg">
         <br /><p>Kuria John Mbugua 🇰🇪</p>
    
-         <p><strong><em>junior</em> web Developer🏆🫠✅<strong></p>
-                <br />...about<button style="padding:6px;background-color:aqua;border-color:aqua"><a href="./public/about.html">🔔</a><br /></button>
-                <br />contact<button style="padding:6px;background-color:aqua;border-color:aqua"><a href="./public/contact.html">🔔</button></a>
-                <br /><br/><a href="./public/resume.html"><button style="padding:15px;background-color:rgb(218, 22, 22);border-radius:20px;">Resume⭐⭐</button></a>
+         <p><strong><em>junior</em> web Developer🏆🫠✅</strong></p>
+                <br />...about<button class="red-text"><a href="./public/about.html">🔔</a><br /></button>
+                <br />contact<button class="red-text"><a href="./public/contact.html">🔔</button></a>
+                <br />
+                <br />
+                <a href="./public/resume.html"><button id="new">Resume⭐⭐</button></a>
        </h1>
  <hr />
-       <button><a href="./public/movie-ranking.html" style="background-color:aliceblue;color:black;font-size:x-large;">movie ranking project</a></button><br />
-       <img src="./assets/images/movie-rank.png"width="200px" height="200px"> <br />
-       <button><a href="./public/birthday-invite.html" style="background-color:aliceblue;color:black;font-size:x-large;">birthday invite project</a></button><br />
-       <img src="./assets/images/birthday invitation.png" width="200px" height="200px">
+       <button class="ming"><a href="./public/movie-ranking.html">movie ranking project</a></button><br />
+       <img class="yes" src="./assets/images/movie-rank.png"> <br />
+       <button class="ming"><a href="./public/birthday-invite.html">birthday invite project</a></button><br />
+       <img class="yes"src="./assets/images/birthday invitation.png">
    </pre>
 <hr />
-<footer>
-    <p>© 2024 Kuria John Mbugua</p>
-</footer>
+
 </body>
 </html>
