--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>home page</title>
 </head>
 <body>
-       <h1>
+       <h1 id="same">
         <img id="meme" src="./assets/images/WhatsApp Image 2024-04-19 at 5.02.11 AM.jpeg">
         <br /><p>Kuria John Mbugua 🇰🇪</p>
    
