--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>home page</title>
 </head>
 <body>
-       <h1 id="same">
+       <div><h1 id="same">
         <img id="meme" src="./assets/images/WhatsApp Image 2024-04-19 at 5.02.11 AM.jpeg">
         <br /><p>Kuria John Mbugua 🇰🇪</p>
    
@@ -18,6 +18,7 @@
                 <br />
                 <a href="./public/resume.html"><button id="new">Resume⭐⭐</button></a>
        </h1>
+       </div>
  <hr />
        <button class="ming"><a href="./public/movie-ranking.html">movie ranking project</a></button><br />
        <img class="yes" src="./assets/images/movie-rank.png"> <br />
